--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 <body>
 
-    <!-- Question 1: Signup Form -->
+    <!-- Part of Q1: Signup Form -->
     <h2>Signup Form</h2>
     <form id="signupForm">
         <label for="name">Name:</label>
@@ -77,12 +77,12 @@
 
     <div id="userData"></div>
 
-    <!-- Question 2: Read More -->
+    <!-- Part of Q2: Read More -->
     <h2>Item Details</h2>
     <p>Some details about the item. <span id="fullDetails" class="hidden">Full details of the item.</span></p>
     <button onclick="showDetails()">Read more</button>
 
-    <!-- Question 3: Student Details Table -->
+    <!-- Part of Q3: Student Details Table -->
     <h2>Student Details</h2>
     <form id="studentForm">
         <label for="studentName">Name:</label>
@@ -105,7 +105,7 @@
         <tbody></tbody>
     </table>
 
-    <!-- Question 3 (Continued): Hidden Edit Form -->
+    <!-- Hidden Edit Form -->
     <form id="editForm" class="hidden">
         <label for="editName">Name:</label>
         <input type="text" id="editName" name="editName" required>
@@ -116,6 +116,6 @@
         <button type="button" onclick="updateStudent()">Update</button>
     </form>
 
-    <script src="script.js"></script>
+    <script src="assign.js"></script>
 </body>
 </html>
