--- a/index.html
+++ b/index.html
@@ -7,59 +7,67 @@
     <title>Webpage Operations</title>
     
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 20px;
-        }
+    body {
+        font-family: 'Arial', sans-serif;
+        margin: 20px;
+        background-color: black;
+        color: purple;
+    }
 
-        h2 {
-            text-align: center;
-        }
+    h2 {
+        text-align: center;
+    }
 
-        form {
-            max-width: 400px;
-            margin: 0 auto;
-        }
+    form {
+        max-width: 400px;
+        margin: 0 auto;
+    }
 
-        label {
-            display: block;
-            margin-bottom: 8px;
-        }
+    label {
+        display: block;
+        margin-bottom: 8px;
+    }
 
-        input {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 16px;
-            box-sizing: border-box;
-        }
+    input {
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 16px;
+        box-sizing: border-box;
+    }
 
-        button {
-            width: 100%;
-            padding: 10px;
-            box-sizing: border-box;
-        }
+    button {
+        width: 100%;
+        padding: 10px;
+        box-sizing: border-box;
+        background-color: #333; /* Charcoal grey for the button */
+        color: purple; /* White text for the button */
+        border: none;
+        cursor: pointer;
+    }
 
-        .hidden {
-            display: none;
-        }
+    .hidden {
+        display: none;
+    }
 
-        table {
-            max-width: 600px;
-            margin: 20px auto;
-            border-collapse: collapse;
-            width: 100%;
-        }
+    table {
+        max-width: 600px;
+        margin: 20px auto;
+        border-collapse: collapse;
+        width: 100%;
+    }
 
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
+    th, td {
+        border: 1px solid #333; /* Charcoal grey border for table cells */
+        padding: 8px;
+        text-align: left;
+    }
 
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
+    th {
+        background-color: #333; /* Charcoal grey background for table header */
+        color: purple; /* White text for table header */
+    }
+</style>
+
 </head>
 <body>
 
