--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         font-family: 'Arial', sans-serif;
         margin: 20px;
         background-color: black;
-        color: purple;
+        color: white;
     }
 
     h2 {
@@ -40,7 +40,7 @@
         padding: 10px;
         box-sizing: border-box;
         background-color: #333; /* Charcoal grey for the button */
-        color: purple; /* White text for the button */
+        color: white; /* White text for the button */
         border: none;
         cursor: pointer;
     }
