--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     th {
         background-color: #333; /* Charcoal grey background for table header */
-        color: purple; /* White text for table header */
+        color: white; /* White text for table header */
     }
 </style>
 
