--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <!-- Part of Q2: Read More -->
     <h2>Item Details</h2>
-    <p>Some details about the item. <span id="fullDetails" class="hidden">Full details of the item.</span></p>
+    <p>This is the list of Student and their GPA. <span id="fullDetails" class="hidden">Those who have passe the threshold of 2.7 congratualtions you have passed, those who have received less than 2.7 we are sorry to inform you have failed, better luck next time!.</span></p>
     <button onclick="showDetails()">Read more</button>
 
     <!-- Part of Q3: Student Details Table -->
