--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <!-- Part of Q2: Read More -->
     <h2>Item Details</h2>
-    <p>This is the list of Student and their GPA. <span id="fullDetails" class="hidden">Those who have passe the threshold of 2.7 congratualtions you have passed, those who have received less than 2.7 we are sorry to inform you have failed, better luck next time!.</span></p>
+    <p>This is the list of Student and their GPA. <span id="fullDetails" class="hidden">Those who have passed the threshold of 2.7 congratualations you have passed, those who have received less than 2.7 we are sorry to inform you have failed, better luck next time!.</span></p>
     <button onclick="showDetails()">Read more</button>
 
     <!-- Part of Q3: Student Details Table -->
